# learning-rust

./: Cargo.toml  readme.md  rustfmt.toml
.github/workflows/: test-on-push.yml
src/: book.rs  kata.rs  lib.rs  main.rs
src/book/: _02_guessing_game.rs  _03_functions_and_variables.rs  _04_ownership.rs  _05_structs.rs  _06_enums.rs  _08_collections.rs  _09_errors.rs  _10_generic_types.rs  _10_lifetimes.rs  _10_traits.rs  _11_tests.rs  _13_closures.rs  _13_iterators.rs  _14_doctest.rs  _15_box.rs  _15_deref_and_drop.rs  _15_mocks.rs  _15_rc_smart_pointer.rs  _15_refcell_smart_pointer.rs  _15_weak_smart_pointer.rs  _16_fearless_concurrency.rs  _17_oop.rs  _18_patterns_matching.rs  _19_advanced_functions_and_closures.rs  _19_advanced_traits.rs  _19_advanced_types.rs  _19_macros.rs  _19_unsafe_rust.rs  iterators.rs  mod.rs
src/book/_12_minigrep/: Cargo.toml
src/book/_12_minigrep/src/: config.rs  lib.rs  main.rs
src/book/_12_minigrep/tests/: minigrep_main_test.rs
src/book/_19_hello_macro/: Cargo.toml
src/book/_19_hello_macro/_19_hello_macro_derive/: Cargo.toml
src/book/_19_hello_macro/_19_hello_macro_derive/src/: lib.rs
src/book/_19_hello_macro/src/: lib.rs
src/book/_20_web_server/: Cargo.toml
src/book/_20_web_server/src/: lib.rs  main.rs  threads.rs
src/book/_20_web_server/src/http/: request.rs  server.rs
src/book/_20_web_server/src/threads/: message.rs  mod.rs  worker.rs  (+1 more)
src/kata/: fizz_buzz.rs  mod.rs
src/learning/: dyn_box_vs_generics.rs  mod.rs
src/learnings/: dyn_box_vs_generics.rs  mod.rs
tests/: fizz_buzz_test.rs
tests/support/: mod.rs
