[package]
name = "learning-rust"
version = "0.1.0"
edition = "2021"
authors = ["François Perron <fperron@gmail.com>"]
description = "Let's learn Rust"
license = "MIT"
default-run = "learning-rust"

[workspace]
members = [".", "src/book/_12_minigrep", "src/book/_19_hello_macro", "src/book/_19_hello_macro/_19_hello_macro_derive", "src/book/_20_web_server"]
default-members = [".", "src/book/_12_minigrep", "src/book/_19_hello_macro", "src/book/_19_hello_macro/_19_hello_macro_derive", "src/book/_20_web_server"]

[dependencies]
rand = "0.8.5"
stacker = "0.1.15"
_12_minigrep = { path = "src/book/_12_minigrep" }
_19_hello_macro = { path = "src/book/_19_hello_macro" }
_19_hello_macro_derive = { path = "src/book/_19_hello_macro/_19_hello_macro_derive" }
_20_web_server = { path = "src/book/_20_web_server" }
